--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "zadanie-18",
+  "name": "module_18",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --env production",
-    "start": "webpack-dev-server --hot --env development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "NODE_ENV=production webpack",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --inline --hot --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "socket.io": "^2.1.0",
-    "socket.io-client": "^2.1.0"
-  },
-  "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.2.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "express": "^4.16.2",
+    "html-webpack-plugin": "^2.30.1",
+    "http": "0.0.0",
     "optimize-js-plugin": "0.0.4",
-    "react-hot-loader": "^4.0.1",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
-  },
-  "keywords": [],
-  "description": ""
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.5"
+  }
 }
